Fixed project info not scrolling on overflow

--- a/style.scss
+++ b/style.scss
@@ -231,7 +231,6 @@ section {
       position: fixed;
       width: 100%;
       height: 100vh;
-      overflow: scroll;
       top: 50%;
       left: 50%;
       display: flex;
@@ -253,6 +252,15 @@ section {
       .tile-tooltip-inner {
         margin: 2rem;
         max-width: 500px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .tile-description {
+          display: block;
+          max-height: 90vh;
+          width: 100%;
+          overflow: scroll;
+        }
       }
     }
     .tile-footer {
